--- a/heraldika/forras_heraldika/cimertan.html
+++ b/heraldika/forras_heraldika/cimertan.html
@@ -12,8 +12,8 @@
 <p> A heraldika vagy címertan (korábban czímerintézmény, címerészet) a címerekkel foglalkozó történeti segédtudomány. Elnevezését a heroldokról kapta, akik a címerek első középkori szakértői voltak. A heraldika két részre oszlik: címerelméletre és címerművészetre.</p>
 
 <ul>
-   <li> A <div class="fk">címerelmélet</div>, elméleti heraldika vagy a szorosabb értelemben vett címertudomány a címerjogot, a címerek történetét érinti, a szabályos és szabályellenes címerekkel, a címerismerettel (régiesen: címerisme) foglalkozik.</li>
-   <li> A <div class="fk">címerművészet</div>, a címerábrázolás tana vagy címergyakorlat a címerek szabályos megszerkesztésével, megrajzolásával (kiállításával), leírásával, gyakorlati alkalmazásával, historizálásával és a címerkritikával foglalkozik.</li>
+   <li> A <span class="fk">címerelmélet</span>, elméleti heraldika vagy a szorosabb értelemben vett címertudomány a címerjogot, a címerek történetét érinti, a szabályos és szabályellenes címerekkel, a címerismerettel (régiesen: címerisme) foglalkozik.</li>
+   <li> A <span class="fk">címerművészet</span>, a címerábrázolás tana vagy címergyakorlat a címerek szabályos megszerkesztésével, megrajzolásával (kiállításával), leírásával, gyakorlati alkalmazásával, historizálásával és a címerkritikával foglalkozik.</li>
 </ul>
 <p> A címer olyan, általában pajzson viselt, meghatározott szabályok szerint megszerkesztett színes jelvény, melyet egy család, intézmény vagy testület a saját maga azonosítására örökletes, állandó jelleggel használ.</p>
 
