Heraldika modositas letoltve

--- a/heraldika/forras_heraldika/cimertan.html
+++ b/heraldika/forras_heraldika/cimertan.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="cimer.css">
 </head>
 <body>
-  <h1>Heraldika <a href="https://hu.wikipedia.org/wiki/Heraldika" a target="_blank"Heraldika><sup>*</sup></a></h1>
+  <h1>Heraldika <a href="https://hu.wikipedia.org/wiki/Heraldika" a target="_blank"><sup>*</sup></a></h1>
 
 <p> A heraldika vagy címertan (korábban czímerintézmény, címerészet) a címerekkel foglalkozó történeti segédtudomány. Elnevezését a heroldokról kapta, akik a címerek első középkori szakértői voltak. A heraldika két részre oszlik: címerelméletre és címerművészetre.</p>
 
