belso tablazat kesz

--- a/Parlagfu/parlagfu.html
+++ b/Parlagfu/parlagfu.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A parlagfűről</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table id="alap">
         <tr>
             <td>
-
+                <table id="belsoTabla">
+                    <tr>
+                        <td colspan="6"><img src="potcim.png" alt="Kép a parlagfűről" title="Kép a parlagfűről"></td>
+                                            </tr>
+                    <tr id="masodikSor">
+                        <td>Előfordulása</td>
+                        <td>Fejlődése</td>
+                        <td>Terjedése</td>
+                        <td>Parlagfű allergia</td>
+                        <td>Megelőzés</td>
+                        <td>Irtási módszerek</td>
+                    </tr>
+                    <tr>
+                        <td colspan="6"></td>
+                                            </tr>
+                </table>
             </td>
         </tr>
     </table>
