--- a/A tizedes meg a többiek/tizedes.html
+++ b/A tizedes meg a többiek/tizedes.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A tizedes meg a többiek</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <table cellspacing="0" cellpadding="5px">
+        <tr>
+            <td width="120px"></td>
+            <td>
+                <a href="https://hu.wikipedia.org/wiki/A_tizedes_meg_a_többiek"><img src="cim.jpg" alt=""></a>
+            </td>
+            <td width="120px">    </td>
+        </tr>
+    </table>
 </body>
 </html>
