Tizedes feladat kesz

--- a/A tizedes meg a többiek/index.html
+++ b/A tizedes meg a többiek/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>53 magyar film</title>
+<link rel="stylesheet" href="style2.css">
 <style type="text/css">
 a {
 				color: #C0C0C0;
@@ -25,8 +26,8 @@ a:hover {
 <table width="1000" cellspacing="0" cellpadding="15" align="left" border=0>
 	<tr>
 		<td width="120">&nbsp;</td>
-		<td bgcolor="#FFFFFF"><h2>&quot;53 magyar film&quot;</h2>
-			<p>
+		<td bgcolor="#FFFFFF"><h2 align="center">&quot;53 magyar film&quot;</h2>
+			<p align="justify">
 				Az "53 magyar film" filmválogatás, melyet a Magyar Művészeti 
 				Akadémia tagjai állítottak össze az általuk legértékesebb alkotásnak tartott magyar 
 				nagyjátékfilmekből.
@@ -40,7 +41,7 @@ a:hover {
 				beérkezett adatokat összesítették, s mivel az utolsó helyen holtverseny alakult ki, végül is 
 				egy 53-as listát hoztak nyilvánosságra.
 			</p>
-			<table cellspacing="0" cellpadding="5" border="0">
+			<table width="100%" cellspacing="0" cellpadding="5" border="1px">
 				<tr>
 					<th>Cím</th>
 					<th>Rendező</th>
@@ -49,267 +50,267 @@ a:hover {
 				<tr>
 					<td>80 huszár</td>
 					<td>Sára Sándor</td>
-					<td>1978</td>
+					<td align="center">1978</td>
 				</tr>
 				<tr>
 					<td>A kis Valentino</td>
 					<td>Jeles András</td>
-					<td>1979</td>
+					<td align="center">1979</td>
 				</tr>
 				<tr>
 					<td>A ménesgazda</td>
 					<td>Kovács András</td>
-					<td>1978</td>
+					<td align="center">1978</td>
 				</tr>
 				<tr>
 					<td>A tanú</td>
 					<td>Bacsó Péter</td>
-					<td>1969</td>
+					<td align="center">1969</td>
 				</tr>
 				<tr>
-					<td>A tizedes meg a többiek</td>
+					<td><a id="tizedes" href="tizedes.html"> A tizedes meg a többiek</a></td>
 					<td>Keleti Márton</td>
-					<td>1965</td>
+					<td align="center">1965</td>
 				</tr>
 				<tr>
 					<td>Amerikai anzix</td>
 					<td>Bódy Gábor</td>
-					<td>1975</td>
+					<td align="center">1975</td>
 				</tr>
 				<tr>
 					<td>Angi Vera</td>
 					<td>Gábor Pál</td>
-					<td>1978</td>
+					<td align="center">1978</td>
 				</tr>
 				<tr>
 					<td>Árvácska</td>
 					<td>Ranódy László</td>
-					<td>1976</td>
+					<td align="center">1976</td>
 				</tr>
 				<tr>
 					<td>Az én XX. századom</td>
 					<td>Enyedi Ildikó</td>
-					<td>1989</td>
+					<td  align="center">1989</td>
 				</tr>
 				<tr>
 					<td>Az ötödik pecsét</td>
 					<td>Fábri Zoltán</td>
-					<td>1976</td>
+					<td align="center">1976</td>
 				</tr>
 				<tr>
 					<td>Bakaruhában</td>
 					<td>Fehér Imre</td>
-					<td>1957</td>
+					<td align="center">1957</td>
 				</tr>
 				<tr>
 					<td>Csillagosok, katonák</td>
 					<td>Jancsó Miklós</td>
-					<td>1967</td>
+					<td align="center">1967</td>
 				</tr>
 				<tr>
 					<td>Csontváry</td>
 					<td>Huszárik Zoltán</td>
-					<td>1980</td>
+					<td align="center">1980</td>
 				</tr>
 				<tr>
 					<td>Édes Anna</td>
 					<td>Fábri Zoltán</td>
-					<td>1958</td>
+					<td align="center">1958</td>
 				</tr>
 				<tr>
 					<td>Egy magyar nábob, Kárpáthy Zoltán</td>
 					<td>Várkonyi Zoltán</td>
-					<td>1966</td>
+					<td align="center">1966</td>
 				</tr>
 				<tr>
 					<td>Eldorádó</td>
 					<td>Bereményi Géza</td>
-					<td>1988</td>
+					<td align="center">1988</td>
 				</tr>
 				<tr>
 					<td>Emberek a havason</td>
 					<td>Szőts István</td>
-					<td>1942</td>
+					<td align="center">1942</td>
 				</tr>
 				<tr>
 					<td>Ének a búzamezőkről</td>
 					<td>Szőts István</td>
-					<td>1947</td>
+					<td align="center">1947</td>
 				</tr>
 				<tr>
 					<td>Feldobott kő</td>
 					<td>Sára Sándor</td>
-					<td>1968</td>
+					<td align="center">1968</td>
 				</tr>
 				<tr>
 					<td>Filmregény - Három nővér</td>
 					<td>Dárday István</td>
-					<td>1977</td>
+					<td align="center">1977</td>
 				</tr>
 				<tr>
 					<td>Fotográfia</td>
 					<td>Zolnay Pál</td>
-					<td>1972</td>
+					<td align="center">1972</td>
 				</tr>
 				<tr>
 					<td>Hannibál tanár úr</td>
 					<td>Fábri Zoltán</td>
-					<td>1956</td>
+					<td align="center">1956</td>
 				</tr>
 				<tr>
 					<td>Ház a sziklák alatt</td>
 					<td>Makk Károly</td>
-					<td>1958</td>
+					<td align="center">1958</td>
 				</tr>
 				<tr>
 					<td>Hideg napok</td>
 					<td>Kovács András</td>
-					<td>1966</td>
+					<td align="center">1966</td>
 				</tr>
 				<tr>
 					<td>Holt vidék</td>
 					<td>Gaál István</td>
-					<td>1971</td>
+					<td align="center">1971</td>
 				</tr>
 				<tr>
 					<td>Húsz óra</td>
 					<td>Fábri Zoltán</td>
-					<td>1965</td>
+					<td align="center">1965</td>
 				</tr>
 				<tr>
 					<td>Hyppolit, a lakáj</td>
 					<td>Székely István</td>
-					<td>1931</td>
+					<td align="center">1931</td>
 				</tr>
 				<tr>
 					<td>Ismeri a szandi mandit?</td>
 					<td>Gyarmathy Lívia</td>
-					<td>1969</td>
+					<td align="center">1969</td>
 				</tr>
 				<tr>
 					<td>Jutalomutazás</td>
 					<td>Dárday István</td>
-					<td>1974</td>
+					<td align="center">1974</td>
 				</tr>
 				<tr>
 					<td>Két félidő a pokolban</td>
 					<td>Fábri Zoltán</td>
-					<td>1961</td>
+					<td align="center">1961</td>
 				</tr>
 				<tr>
 					<td>Körhinta</td>
 					<td>Fábri Zoltán</td>
-					<td>1955</td>
+					<td align="center">1955</td>
 				</tr>
 				<tr>
 					<td>Liliomfi</td>
 					<td>Makk Károly</td>
-					<td>1955</td>
+					<td align="center">1955</td>
 				</tr>
 				<tr>
 					<td>Ludas Matyi</td>
 					<td>Nádasdy Kálmán, Ranódy László</td>
-					<td>1949</td>
+					<td align="center">1949</td>
 				</tr>
 				<tr>
 					<td>Magyarok</td>
 					<td>Fábri Zoltán</td>
-					<td>1978</td>
+					<td align="center">1978</td>
 				</tr>
 				<tr>
 					<td>Megáll az idő</td>
 					<td>Gothár Péter</td>
-					<td>1981</td>
+					<td align="center">1981</td>
 				</tr>
 				<tr>
 					<td>Mephisto</td>
 					<td>Szabó István</td>
-					<td>1981</td>
+					<td align="center">1981</td>
 				</tr>
 				<tr>
 					<td>Napló gyermekeimnek</td>
 					<td>Mészáros Márta</td>
-					<td>1982</td>
+					<td align="center">1982</td>
 				</tr>
 				<tr>
 					<td>Nárcisz és Psyché</td>
 					<td>Bódy Gábor</td>
-					<td>1980</td>
+					<td align="center">1980</td>
 				</tr>
 				<tr>
 					<td>Oldás és kötés</td>
 					<td>Jancsó Miklós</td>
-					<td>1963</td>
+					<td align="center">1963</td>
 				</tr>
 				<tr>
 					<td>Pacsirta</td>
 					<td>Ranódy László</td>
-					<td>1963</td>
+					<td align="center">1963</td>
 				</tr>
 				<tr>
 					<td>Redl ezredes</td>
 					<td>Szabó István</td>
-					<td>1984</td>
+					<td align="center">1984</td>
 				</tr>
 				<tr>
 					<td>Régi idők focija</td>
 					<td>Sándor Pál</td>
-					<td>1973</td>
+					<td align="center">1973</td>
 				</tr>
 				<tr>
 					<td>Sátántangó</td>
 					<td>Tarr Béla</td>
-					<td>1994</td>
+					<td align="center">1994</td>
 				</tr>
 				<tr>
 					<td>Sodrásban</td>
 					<td>Gaál István</td>
-					<td>1963</td>
+					<td align="center">1963</td>
 				</tr>
 				<tr>
 					<td>Szegénylegények</td>
 					<td>Jancsó Miklós</td>
-					<td>1965</td>
+					<td align="center">1965</td>
 				</tr>
 				<tr>
 					<td>Szerelem</td>
 					<td>Makk Károly</td>
-					<td>1970</td>
+					<td align="center">1970</td>
 				</tr>
 				<tr>
 					<td>Szindbád</td>
 					<td>Huszárik Zoltán</td>
-					<td>1971</td>
+					<td align="center">1971</td>
 				</tr>
 				<tr>
 					<td>Szirmok, virágok, koszorúk</td>
 					<td>Lugossy László</td>
-					<td>1984</td>
+					<td align="center">1984</td>
 				</tr>
 				<tr>
 					<td>Talpalatnyi föld</td>
 					<td>Bán Frigyes</td>
-					<td>1948</td>
+					<td align="center">1948</td>
 				</tr>
 				<tr>
 					<td>Te rongyos élet</td>
 					<td>Bacsó Péter</td>
-					<td>1983</td>
+					<td align="center">1983</td>
 				</tr>
 				<tr>
 					<td>Tízezer nap</td>
 					<td>Kósa Ferenc</td>
-					<td>1965</td>
+					<td align="center">1965</td>
 				</tr>
 				<tr>
 					<td>Valahol Európában</td>
 					<td>Radványi Géza</td>
-					<td>1947</td>
+					<td align="center">1947</td>
 				</tr>
 				<tr>
 					<td>Woyzeck</td>
 					<td>Szász János</td>
-					<td>1994</td>
+					<td align="center">1994</td>
 				</tr>
 			</table>
 		</td>
