--- a/Sárga süti/suti.html
+++ b/Sárga süti/suti.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head></head>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <title>Sárgasüti</title>
+    <link rel="stylesheet" href="suti.css">
+</head>
 <body>
-<div>
+<div id="keret">
 
 Sárgasüti
 A Sárgasüti egy erősen valláshoz kapcsolódó, húsvéti étel. Főként a görög katolikus vidékeken ismert, többek között a Hajdúságban és Szabolcs-Szatmár-Bereg megyében. Ezeken a vidékeken annyira elterjedt, hogy akár a római katolikus vallásúak is elkészítették (és készítik a mai napig), a húsvéti vallási szokások jegyében. Több néven ismert: sárga- vagy édessüti, süticske, illetve szláv eredetű szóval szirikk vagy szirka.
