--- a/Sárga süti/suti.html
+++ b/Sárga süti/suti.html
@@ -8,21 +8,21 @@
 <body>
 <div id="keret">
 
-Sárgasüti
-A Sárgasüti egy erősen valláshoz kapcsolódó, húsvéti étel. Főként a görög katolikus vidékeken ismert, többek között a Hajdúságban és Szabolcs-Szatmár-Bereg megyében. Ezeken a vidékeken annyira elterjedt, hogy akár a római katolikus vallásúak is elkészítették (és készítik a mai napig), a húsvéti vallási szokások jegyében. Több néven ismert: sárga- vagy édessüti, süticske, illetve szláv eredetű szóval szirikk vagy szirka.
+<h1 class="ritka">Sárgasüti</h1> 
+<a href="https://www.tudasfaja.com/osi-magyar-finomsag-a-sarga-turo-amit-mar-sokan-nem-is-ismernek-ime-az-eredeti-recept/"><img id="kep" src="edes-sargasuti.jpg" alt="Sárgasüti húsvéti díszítéssel" title="Sárgasüti húsvéti díszítéssel"></a>
+<p>A Sárgasüti egy erősen valláshoz kapcsolódó, húsvéti étel. Főként a görög katolikus vidékeken ismert, többek között a Hajdúságban és Szabolcs-Szatmár-Bereg megyében. Ezeken a vidékeken annyira elterjedt, hogy akár a római katolikus vallásúak is elkészítették (és készítik a mai napig), a húsvéti vallási szokások jegyében. Több néven ismert: sárga- vagy édessüti, süticske, illetve szláv eredetű szóval szirikk vagy szirka.</p> 
+<h2 class="ritka">Eredete</h2> 
+<p>A húsvétot megelőző nagyböjt 40 napos böjtölést lezárandó a vasárnapi asztalra már bőségesen kerülhetett étel. Ezeket az ételeket mind a római katolikusok, mind a görög katolikusok vasárnap délelőtt a templomba vitték, hogy felszenteljék. Régebben hatalmas batyukba tették az ételt és mindent elvittek a templomba, hogy megszentelhessék, majd csak egy-egy darabot vágtak a kenyérből vagy kalácsból, a sonkából és a Sárgasütiból is. A jellegzetes húsvéti kalácsot pászkának is hívták, innen a 'pászkaszentelés' összefoglaló név, amely később minden húsvéti étel szentelésére vonatkozott. A Sárgasüti eredetileg a görög katolikusok étke, de azokon a vidékeken a római katolikusok is ismerik, és szívesen készítik, de csak húsvétkor. Ez adja az étel ünnepélyes jellegét.</p> 
 
-Eredete
-A húsvétot megelőző nagyböjt 40 napos böjtölést lezárandó a vasárnapi asztalra már bőségesen kerülhetett étel. Ezeket az ételeket mind a római katolikusok, mind a görög katolikusok vasárnap délelőtt a templomba vitték, hogy felszenteljék. Régebben hatalmas batyukba tették az ételt és mindent elvittek a templomba, hogy megszentelhessék, majd csak egy-egy darabot vágtak a kenyérből vagy kalácsból, a sonkából és a Sárgasütiból is. A jellegzetes húsvéti kalácsot pászkának is hívták, innen a 'pászkaszentelés' összefoglaló név, amely később minden húsvéti étel szentelésére vonatkozott. A Sárgasüti eredetileg a görög katolikusok étke, de azokon a vidékeken a római katolikusok is ismerik, és szívesen készítik, de csak húsvétkor. Ez adja az étel ünnepélyes jellegét.
+<h2 class="ritka">A Sárgasüti receptje főre:</h2> 
 
-A Sárgasüti receptje főre:
-
-Hozzávalók:
+<h3 class="ritka">Hozzávalók:</h3> 
    
 0.2 l tej
 2 db tojás
 1 ek kristálycukor
    
-Elkészítés:
+<h3 class="ritka">Elkészítés:</h3> 
     
 Kiöblítünk egy nagyobb, vastagabb aljú lábast hideg vízzel és így öntjük bele a tejet, hogy ne égjen le a forralás során.
 Felforraljuk és beletesszük a cukrot és a sót.
